# plwordnet-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  logic.rs  model.rs  parser.rs  tests.rs
